@@ -61,11 +61,6 @@ greeter_login_list_lookup (GSList *l, const gchar *data)
 	list = list->next;
     }
 
-    /* ugly hack for migration from 'Default.desktop'
-       to 'default.desktop' */
-    if (strcmp (data, "Default.desktop") == 0)
-	    return TRUE;
-
     return FALSE;
 }
 
@@ -318,11 +313,19 @@ greeter_session_init (void)
 			continue;
 		}
 
+		/* already found this session, ignore */
+		if (g_hash_table_lookup (sessnames, dent->d_name) != NULL) {
+			dent = readdir (sessdir);
+			continue;
+		}
+
+
 		s = g_strconcat (dir, "/", dent->d_name, NULL);
 		cfg = ve_config_new (s);
 		g_free (s);
 
 		if (ve_config_get_bool (cfg, "Desktop Entry/Hidden=false")) {
+			g_hash_table_insert (sessnames, g_strdup (dent->d_name), "foo");
 			ve_config_destroy (cfg);
 			dent = readdir (sessdir);
 			continue;
@@ -332,6 +335,7 @@ greeter_session_init (void)
 		if ( ! ve_string_empty (tryexec)) {
 			char *full = g_find_program_in_path (tryexec);
 			if (full == NULL) {
+				g_hash_table_insert (sessnames, g_strdup (dent->d_name), "foo");
 				g_free (tryexec);
 				ve_config_destroy (cfg);
 				dent = readdir (sessdir);
@@ -348,6 +352,7 @@ greeter_session_init (void)
 		ve_config_destroy (cfg);
 
 		if G_UNLIKELY (ve_string_empty (exec) || ve_string_empty (name)) {
+			g_hash_table_insert (sessnames, g_strdup (dent->d_name), "foo");
 			g_free (exec);
 			g_free (name);
 			g_free (comment);
