@@ -1,3 +1,10 @@
+Mon Sep 22 10:03:10 2003  George Lebl <jirka@5z.com>
+
+	* slave/gdm.c, gui/gdmlogin.c, gui/greeter/greeter_session.c: Fix
+	  session masking by path in the greeters and rework the 'Desktop'
+	  -> 'desktop' migration code to be correct and simpler (migrate
+	  where we read from the .dmrc)
+
 Sat Sep 20 09:32:52 2003  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c, gui/greeter/greeter_session.c: test for defsess and
